[package]
name = "vulkan-sandbox"
version = "0.1.0"
authors = ["BrandtM <marius.brandt@hotmail.com>"]
edition = "2018"

[dependencies]
kiss3d = "0.23.0"
nalgebra = "0.20.0"
ncollide2d = "0.22.0"
ncollide3d = "0.22.0"
rand = "0.7.3"
glfw = "0.37.0"
vulkano = "0.18.0"
vulkano-win = "0.18.0"
winit = "0.22.0"
cgmath = "0.17.0"
vulkano-shaders = "0.18.0"